--- a/shop/templates/partials/header.html
+++ b/shop/templates/partials/header.html
@@ -741,17 +741,17 @@
             شماره موبایل خود را وارد کنید:
           </p>
           <div class="relative mt-2">
-            <input class="rounded-xl text-zinc-600 bg-[#f0f0f0] pl-10 pr-4 py-2.5 w-full placeholder:text-zinc-400 placeholder:text-sm focus:outline-0" type="tel" placeholder="09.........">
-            <a href="#">
+            <input id="mobile_number" class="rounded-xl text-zinc-600 bg-[#f0f0f0] pl-10 pr-4 py-2.5 w-full placeholder:text-zinc-400 placeholder:text-sm focus:outline-0" type="tel" placeholder="09.........">
+            <a  href="">
               <img class="top-3 absolute left-3 size-5" src="{{media_url}}image/icons/phone.svg" alt="">
             </a>
           </div>
-          <a href="#" class="text-center w-1/2 mx-auto mt-7 bg-gradient-to-bl from-primary-500 to-primary-400 hover:opacity-90 hover:shadow-lg transition rounded-2xl px-2.5 py-3 flex justify-center items-center gap-x-2 text-sm text-white">
+          <a onclick="get_mobile_number()" href="#" class="text-center w-1/2 mx-auto mt-7 bg-gradient-to-bl from-primary-500 to-primary-400 hover:opacity-90 hover:shadow-lg transition rounded-2xl px-2.5 py-3 flex justify-center items-center gap-x-2 text-sm text-white">
             ارسال کد تایید
           </a>
         </div>
         <!-- verify -->
-        <!-- <div class="pt-5">
+       <div class="pt-5">
           <p class="text-lg text-zinc-800">
             تایید شماره موبایل
           </p>
@@ -766,10 +766,10 @@
             <input name="code" class="code-input border-2 border-zinc-400 focus:border-primary-400 transition w-10 h-12 rounded-md outline-none text-center focus:outline-0 focus:shadow-lg text-zinc-700" required/>
             <input name="code" class="code-input border-2 border-zinc-400 focus:border-primary-400 transition w-10 h-12 rounded-md outline-none text-center focus:outline-0 focus:shadow-lg text-zinc-700" required/>
           </div>
-          <a href="#" class="text-center w-1/2 mx-auto mt-7 bg-gradient-to-bl from-primary-500 to-primary-400 hover:opacity-90 hover:shadow-lg transition rounded-2xl px-2.5 py-3 flex justify-center items-center gap-x-2 text-sm text-white">
+          <a onclick="get_code()" href="#" class="text-center w-1/2 mx-auto mt-7 bg-gradient-to-bl from-primary-500 to-primary-400 hover:opacity-90 hover:shadow-lg transition rounded-2xl px-2.5 py-3 flex justify-center items-center gap-x-2 text-sm text-white">
             ورود
           </a>
-        </div> -->
+        </div> 
       </div>
     </div>
   </header>
