pause the products app and end of product details

--- a/shop/templates/main_template.html
+++ b/shop/templates/main_template.html
@@ -79,6 +79,7 @@ function get_code() {
 
 <script src="{% static "assets/js/swiper.min.js" %}"></script>
 <script src="{% static "assets/js/sliders.js" %}"></script>
+<script src="{% static "assets/js/nouislider.min.js" %}"></script>
 <script src="{% static "assets/js/main.js" %}"></script>
 
 </html>
