--- a/shop/templates/main_template.html
+++ b/shop/templates/main_template.html
@@ -65,6 +65,7 @@ function get_code() {
 <body class="max-w-[1700px] mx-auto">
 
 {% include "partials/header.html" %}
+{% include "partials/messages.html" %}
 {% block content %}
 
 
