--- a/shop/templates/main_template.html
+++ b/shop/templates/main_template.html
@@ -14,6 +14,25 @@
 
 <script src="https://code.jquery.com/jquery-3.7.1.min.js"></script>
 <script>
+function delete_from_shop_cart(product_id) {
+            
+            $.ajax({
+            type:"GET",
+            url:"/ord/delete_shopcart/",
+            data:{
+              product_id:product_id,
+
+            },
+            success: function(res) {
+             $("#shop_cart").html(res);
+
+            },
+    });
+    }
+    
+
+</script>
+<script>
 function add_to_shop_cart(product_id,qty) {
             
             $.ajax({
@@ -24,7 +43,7 @@ function add_to_shop_cart(product_id,qty) {
               qty:qty
             },
             success: function(res) {
-             alert(res)
+             alert(res);
 
             },
     });
