--- a/shop/templates/orders/show_shopcart.html
+++ b/shop/templates/orders/show_shopcart.html
@@ -9,10 +9,11 @@
 
 {% block content %}
 
-<main class="mt-0 md:mt-8">
-  <div>
+
+ 
+</main>
+ <div id="shop_cart">
     {% render_partial "ord:show_shop_cart_tabel" %}
   </div>
-</main>
 
 {% endblock content %}
