--- a/shop/templates/orders/shop_cart_tabel.html
+++ b/shop/templates/orders/shop_cart_tabel.html
@@ -1,7 +1,7 @@
     
   {% load humanize %}
 
-
+<main class="mt-0 md:mt-8">
 
   <nav class="flex items-center gap-1 md:gap-5 w-full md:w-10/12 md:mx-auto">
     <a
@@ -120,7 +120,7 @@
           جمع مبلغ نهایی
         </div>
         <div class="flex">
-          <div class="text-2xl md:text-4xl font-yekanBakhBold">2,100,000</div>
+          <div class="text-2xl md:text-4xl font-yekanBakhBold">{{t_price|intcomma}}</div>
           <div class="-rotate-90 text-xs">
             تومان
           </div>
@@ -165,5 +165,6 @@
       </a>
     </div>
   </div>
+</main>
 
 
