--- a/shop/templates/orders/shop_cart_tabel.html
+++ b/shop/templates/orders/shop_cart_tabel.html
@@ -159,7 +159,7 @@
           </div>
         </div>
       </div>
-      <a href
+      <a href="{% url "ord:checkout" %}"
         class="block bg-primary-500 hover:bg-primary-400 text-white text-center mt-10 px-5 md:px-2.5 py-3 md:py-4 rounded-xl shadow-lg transition-all font-yekanBakhBold md:text-lg">
         ثبت و ادامه
       </a>
