--- a/shop/templates/products/new_products2.html
+++ b/shop/templates/products/new_products2.html
@@ -30,10 +30,18 @@
                     {{product.product_name}}
               </a>
               <div class="flex my-5">
+                {% if product.get_price_by_discounts < product.price %}
+                
+                <del style="color:red;"><div class="text-xl md:text-2xl text-zinc-800">{{product.price|intcomma}}</div></del>
+                <div class="-rotate-90 text-zinc-400 text-xs">
+                  تومان
+                </div>
+                {% else %}
                 <div class="text-xl md:text-2xl text-zinc-800">{{product.price|intcomma}}</div>
                 <div class="-rotate-90 text-zinc-400 text-xs">
                   تومان
                 </div>
+                {% endif %}
               </div>
               <div class="flex justify-between items-center">
                 <a onclick="add_to_shop_cart({{product.id}},1)" href="#" class="group/edit bg-primary-500 hover:bg-primary-400 text-white flex justify-center items-center text-xs md:text-sm mx-auto gap-x-2 px-5 md:px-2.5 py-2.5 rounded-xl shadow-lg transition-all">
