--- a/shop/templates/products/productdetails.html
+++ b/shop/templates/products/productdetails.html
@@ -140,7 +140,7 @@
                 width="20" height="20" fill viewBox="0 0 256 256"><path
                   d="M208,40H48A16,16,0,0,0,32,56v58.78c0,89.61,75.82,119.34,91,124.39a15.53,15.53,0,0,0,10,0c15.2-5.05,91-34.78,91-124.39V56A16,16,0,0,0,208,40Zm0,74.79c0,78.42-66.35,104.62-80,109.18-13.53-4.51-80-30.69-80-109.18V56H208ZM82.34,141.66a8,8,0,0,1,11.32-11.32L112,148.68l50.34-50.34a8,8,0,0,1,11.32,11.32l-56,56a8,8,0,0,1-11.32,0Z"></path></svg>
               <div>
-                گارانتی 18 ماهه
+                گارانتی {{product.warranty}} ماهه
               </div>
             </div>
             <div class="flex gap-x-1 items-center text-zinc-600 text-sm py-5">
@@ -151,22 +151,19 @@
                 ارسال 2 روز کاری
               </div>
             </div>
-            <div class="flex gap-x-1 items-center text-green-500 text-sm py-5">
-              <svg class="fill-green-500" xmlns="http://www.w3.org/2000/svg"
-                width="20" height="20" fill viewBox="0 0 256 256"><path
-                  d="M234,80.12A24,24,0,0,0,216,72H160V56a40,40,0,0,0-40-40,8,8,0,0,0-7.16,4.42L75.06,96H32a16,16,0,0,0-16,16v88a16,16,0,0,0,16,16H204a24,24,0,0,0,23.82-21l12-96A24,24,0,0,0,234,80.12ZM32,112H72v88H32ZM223.94,97l-12,96a8,8,0,0,1-7.94,7H88V105.89l36.71-73.43A24,24,0,0,1,144,56V80a8,8,0,0,0,8,8h64a8,8,0,0,1,7.94,9Z"></path></svg>
-              <div>
-                رضایت از محصول:
-              </div>
-              <span>
-                95%
-              </span>
-            </div>
+    
             <div class="flex flex-col justify-center py-5">
               <div class="text-zinc-800 text-left">
+                {% if product.get_price_by_discounts < product.price %}
+                <span
+                  class="font-yekanBakhExtraBold text-3xl">{{product.get_price_by_discounts|intcomma}}</span>
+                <del class="relative top-[0.15em] decoration-red-500 decoration-2" ><span class="font-yekanBakhExtraBold text-3xl">{{product.price|intcomma}}</span></del>
+                <span class="text-xs">تومان</span>
+                {% else %}
                 <span
                   class="font-yekanBakhExtraBold text-3xl">{{product.price|intcomma}}</span>
                 <span class="text-xs">تومان</span>
+                {% endif %}
               </div>
               <div class="text-xs text-red-400">
                 تنها 2 عدد در انبار باقی مانده
