--- a/shop/templates/products/show_all_newproducts.html
+++ b/shop/templates/products/show_all_newproducts.html
@@ -38,12 +38,20 @@
                   <path d="M9 4C9 3.73478 9.10536 3.48043 9.29289 3.29289C9.48043 3.10536 9.73478 3 10 3H14C14.2652 3 14.5196 3.10536 14.7071 3.29289C14.8946 3.48043 15 3.73478 15 4C15 4.26522 14.8946 4.51957 14.7071 4.70711C14.5196 4.89464 14.2652 5 14 5H10C9.73478 5 9.48043 4.89464 9.29289 4.70711C9.10536 4.51957 9 4.26522 9 4Z" stroke="#" stroke-width="1.5"/>
                 </svg>
               </a>
-              <div class="flex">
-                <div class="text-base md:text-xl">{{product.price|intcomma}}</div>
-                <div class="-rotate-90 text-zinc-400 text-xs md:text-sm">
-                  تومان
-                </div>
+            <div class="flex">
+              {% if product.get_price_by_discounts < product.price %}
+              <div class="text-base md:text-xl">{{product.get_price_by_discounts|intcomma}}</div>
+              <del style="color:red;"><div class="text-base md:text-xl">{{product.price|intcomma}}</div></del>
+              <div class="-rotate-90 text-zinc-400 text-xs md:text-sm">
+                تومان
               </div>
+              {% else %}
+              <div class="text-base md:text-xl">{{product.price|intcomma}}</div>
+              <div class="-rotate-90 text-zinc-400 text-xs md:text-sm">
+                تومان
+              </div>
+              {% endif %}
+            </div>
             </div>
           </div>
             {% endfor %}
