--- a/shop/templates/products/productdetails.html
+++ b/shop/templates/products/productdetails.html
@@ -188,10 +188,17 @@
                 </button>
               </div>
             </div>
+            {% if user.is_authenticated %}
             <button onclick="add_to_shop_cart({{product.id}},0)"
               class="hidden lg:block mx-auto cursor-pointer w-full px-2 py-3 text-sm bg-gradient-to-bl from-primary-500 to-primary-400 hover:opacity-90 transition text-gray-100 rounded-lg">
               افزودن به سبد خرید
             </button>
+            {% else %}
+            <button 
+              class="hidden lg:block mx-auto cursor-pointer w-full px-2 py-3 text-sm bg-gradient-to-bl from-primary-500 to-primary-400 hover:opacity-90 transition text-gray-100 rounded-lg">
+                برای خرید ابتدا وارد شوید 
+            </button>
+            {% endif %}
             <!-- <button class="hidden lg:block mx-auto w-full px-2 py-3 text-sm bg-gradient-to-bl from-primary-500 to-primary-400 opacity-80 cursor-not-allowed transition text-gray-100 rounded-lg">
               محصول موجود نیست!
             </button> -->
