--- a/shop/templates/blog/readable.html
+++ b/shop/templates/blog/readable.html
@@ -3,11 +3,11 @@
           <div class="card-wrapper swiper-wrapper pb-10">
             {% for blog in blogs %}
             <div class="card swiper-slide bg-white rounded-3xl border hover:border-zinc-300 transition border-zinc-300 group p-2 md:p-3 hover:drop-shadow-lg">
-              <a href="" class="image-box block overflow-hidden rounded-lg md:rounded-2xl">
+              <a href="{{blog.get_absolute_url}}" class="image-box block overflow-hidden rounded-lg md:rounded-2xl">
                 <img class="rounded-2xl w-full transition-transform duration-300 ease-in-out group-hover:rotate-3 group-hover:scale-110 lazyload" src="{{media_url}}{{blog.image_name}}" alt="blog"/>
               </a>
               <div class="p-2 mt-2">
-                <a href="./blog(single).html" class="text-xs md:text-sm font-normal md:font-semibold h-8 lg:h-10 line-clamp-2 text-zinc-700">
+                <a href="{{blog.get_absolute_url}}" class="text-xs md:text-sm font-normal md:font-semibold h-8 lg:h-10 line-clamp-2 text-zinc-700">
                  {{blog.blog_name}}
                 </a>
                 <div class="flex justify-between mt-8">
@@ -23,7 +23,7 @@
                     </svg>
                     {{blog.register_date}}
                   </div>
-                  <a href="" class="flex justify-center items-center gap-x-1 group w-fit text-xs md:text-sm transition text-zinc-600 group-hover:text-zinc-700">
+                  <a href="{{blog.get_absolute_url}}" class="flex justify-center items-center gap-x-1 group w-fit text-xs md:text-sm transition text-zinc-600 group-hover:text-zinc-700">
                     ادامه مطلب
                     <svg
                       class="fill-zinc-600 transition group-hover:fill-zinc-700 size-2 md:size-4"
