--- a/shop/templates/blog/blog_datails.html
+++ b/shop/templates/blog/blog_datails.html
@@ -1,7 +1,7 @@
 {% extends "main_template.html" %}
 
 
-
+{% load render_partial %}
 
 {% block title %}
 
@@ -17,127 +17,7 @@
 
   <main class="mt-0 md:mt-8">
     <div class="flex flex-col lg:flex-row px-4 md:px-10 gap-5 pb-20">
-      <div class="lg:w-3/12 h-fit  order-2 md:order-1">
-        <div class="flex gap-x-2 justify-between items-center mb-4">
-          <div class="h-[1px] w-full bg-gradient-to-r from-white via-zinc-300 to-white">
-          </div>
-          <div class="w-48 min-w-fit text-zinc-700 md:font-yekanBakhBold md:text-lg">
-            مطالب مرتبط
-          </div>
-          <div class="h-[1px] w-full bg-gradient-to-r from-white via-zinc-300 to-white">
-          </div>
-        </div>
-        <div class="border border-zinc-300 rounded-3xl p-3 space-y-8">
-          <div class="transition group">
-            <a href="" class="image-box block overflow-hidden rounded-lg md:rounded-2xl">
-              <img class="rounded-2xl w-full transition-transform duration-300 ease-in-out group-hover:rotate-3 group-hover:scale-110 lazyload" src="{{media_url}}image/blog/2.png" alt="blog"/>
-            </a>
-            <div class="p-2 mt-2">
-              <a href="./blog(single).html" class="text-xs md:text-sm font-normal md:font-semibold h-8 lg:h-10 line-clamp-2 text-zinc-700">
-                ۷ ترفند برای افزایش طیش طول عمر هدفون ۷ ترفند برای افزایش طیش طول عمر هدفون ۷ ترفند برای افزایش طیش طول عمر هدفون
-              </a>
-              <div class="flex justify-between mt-8">
-                <div class="text-xs flex gap-x-1 items-center text-zinc-400">
-                  <svg
-                    class="fill-zinc-400"
-                    xmlns="http://www.w3.org/2000/svg"
-                    width="16"
-                    height="16"
-                    fill=""
-                    viewBox="0 0 256 256">
-                    <path d="M208,32H184V24a8,8,0,0,0-16,0v8H88V24a8,8,0,0,0-16,0v8H48A16,16,0,0,0,32,48V208a16,16,0,0,0,16,16H208a16,16,0,0,0,16-16V48A16,16,0,0,0,208,32ZM72,48v8a8,8,0,0,0,16,0V48h80v8a8,8,0,0,0,16,0V48h24V80H48V48ZM208,208H48V96H208V208Z"></path>
-                  </svg>
-                  1403/08/04
-                </div>
-                <a href="" class="flex justify-center items-center gap-x-1 group w-fit text-xs md:text-sm transition text-zinc-600 group-hover:text-zinc-700">
-                  ادامه مطلب
-                  <svg
-                    class="fill-zinc-600 transition group-hover:fill-zinc-700 size-2 md:size-4"
-                    xmlns="http://www.w3.org/2000/svg"
-                    width="14"
-                    height="14"
-                    fill=""
-                    viewBox="0 0 256 256">
-                    <path d="M224,128a8,8,0,0,1-8,8H59.31l58.35,58.34a8,8,0,0,1-11.32,11.32l-72-72a8,8,0,0,1,0-11.32l72-72a8,8,0,0,1,11.32,11.32L59.31,120H216A8,8,0,0,1,224,128Z"></path>
-                  </svg>
-                </a>
-              </div>
-            </div>
-          </div>
-          <div class="transition group">
-            <a href="" class="image-box block overflow-hidden rounded-lg md:rounded-2xl">
-              <img class="rounded-2xl w-full transition-transform duration-300 ease-in-out group-hover:rotate-3 group-hover:scale-110 lazyload" src="{{media_url}}image/blog/2.png" alt="blog"/>
-            </a>
-            <div class="p-2 mt-2">
-              <a href="./blog(single).html" class="text-xs md:text-sm font-normal md:font-semibold h-8 lg:h-10 line-clamp-2 text-zinc-700">
-                ۷ ترفند برای افزایش طیش طول عمر هدفون ۷ ترفند برای افزایش طیش طول عمر هدفون ۷ ترفند برای افزایش طیش طول عمر هدفون
-              </a>
-              <div class="flex justify-between mt-8">
-                <div class="text-xs flex gap-x-1 items-center text-zinc-400">
-                  <svg
-                    class="fill-zinc-400"
-                    xmlns="http://www.w3.org/2000/svg"
-                    width="16"
-                    height="16"
-                    fill=""
-                    viewBox="0 0 256 256">
-                    <path d="M208,32H184V24a8,8,0,0,0-16,0v8H88V24a8,8,0,0,0-16,0v8H48A16,16,0,0,0,32,48V208a16,16,0,0,0,16,16H208a16,16,0,0,0,16-16V48A16,16,0,0,0,208,32ZM72,48v8a8,8,0,0,0,16,0V48h80v8a8,8,0,0,0,16,0V48h24V80H48V48ZM208,208H48V96H208V208Z"></path>
-                  </svg>
-                  1403/08/04
-                </div>
-                <a href="" class="flex justify-center items-center gap-x-1 group w-fit text-xs md:text-sm transition text-zinc-600 group-hover:text-zinc-700">
-                  ادامه مطلب
-                  <svg
-                    class="fill-zinc-600 transition group-hover:fill-zinc-700 size-2 md:size-4"
-                    xmlns="http://www.w3.org/2000/svg"
-                    width="14"
-                    height="14"
-                    fill=""
-                    viewBox="0 0 256 256">
-                    <path d="M224,128a8,8,0,0,1-8,8H59.31l58.35,58.34a8,8,0,0,1-11.32,11.32l-72-72a8,8,0,0,1,0-11.32l72-72a8,8,0,0,1,11.32,11.32L59.31,120H216A8,8,0,0,1,224,128Z"></path>
-                  </svg>
-                </a>
-              </div>
-            </div>
-          </div>
-          <div class="transition group">
-            <a href="" class="image-box block overflow-hidden rounded-lg md:rounded-2xl">
-              <img class="rounded-2xl w-full transition-transform duration-300 ease-in-out group-hover:rotate-3 group-hover:scale-110 lazyload" src="{{media_url}}image/blog/2.png" alt="blog"/>
-            </a>
-            <div class="p-2 mt-2">
-              <a href="./blog(single).html" class="text-xs md:text-sm font-normal md:font-semibold h-8 lg:h-10 line-clamp-2 text-zinc-700">
-                ۷ ترفند برای افزایش طیش طول عمر هدفون ۷ ترفند برای افزایش طیش طول عمر هدفون ۷ ترفند برای افزایش طیش طول عمر هدفون
-              </a>
-              <div class="flex justify-between mt-8">
-                <div class="text-xs flex gap-x-1 items-center text-zinc-400">
-                  <svg
-                    class="fill-zinc-400"
-                    xmlns="http://www.w3.org/2000/svg"
-                    width="16"
-                    height="16"
-                    fill=""
-                    viewBox="0 0 256 256">
-                    <path d="M208,32H184V24a8,8,0,0,0-16,0v8H88V24a8,8,0,0,0-16,0v8H48A16,16,0,0,0,32,48V208a16,16,0,0,0,16,16H208a16,16,0,0,0,16-16V48A16,16,0,0,0,208,32ZM72,48v8a8,8,0,0,0,16,0V48h80v8a8,8,0,0,0,16,0V48h24V80H48V48ZM208,208H48V96H208V208Z"></path>
-                  </svg>
-                  1403/08/04
-                </div>
-                <a href="" class="flex justify-center items-center gap-x-1 group w-fit text-xs md:text-sm transition text-zinc-600 group-hover:text-zinc-700">
-                  ادامه مطلب
-                  <svg
-                    class="fill-zinc-600 transition group-hover:fill-zinc-700 size-2 md:size-4"
-                    xmlns="http://www.w3.org/2000/svg"
-                    width="14"
-                    height="14"
-                    fill=""
-                    viewBox="0 0 256 256">
-                    <path d="M224,128a8,8,0,0,1-8,8H59.31l58.35,58.34a8,8,0,0,1-11.32,11.32l-72-72a8,8,0,0,1,0-11.32l72-72a8,8,0,0,1,11.32,11.32L59.31,120H216A8,8,0,0,1,224,128Z"></path>
-                  </svg>
-                </a>
-              </div>
-            </div>
-          </div>
-        </div>
-      </div>
+      {% render_partial "blog:related_blogs" slug=blog.slug %}
       <!-- main blog -->
       <div class="lg:w-9/12 order-1 md:order-2">
         <div class="mb-7 text-xs flex flex-wrap space-y-2 md:space-y-0 items-center gap-x-2 opacity-90">
@@ -158,7 +38,7 @@
           <div class="flex gap-4 mb-10 flex-wrap">
             <div class="text-xs flex gap-x-1 items-center text-zinc-400">
               <svg class="fill-zinc-400" xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="" viewBox="0 0 256 256"><path d="M208,32H184V24a8,8,0,0,0-16,0v8H88V24a8,8,0,0,0-16,0v8H48A16,16,0,0,0,32,48V208a16,16,0,0,0,16,16H208a16,16,0,0,0,16-16V48A16,16,0,0,0,208,32ZM72,48v8a8,8,0,0,0,16,0V48h80v8a8,8,0,0,0,16,0V48h24V80H48V48ZM208,208H48V96H208V208Z"></path></svg>
-              {{blog.register_date}}
+              {{blog.published_date}}
             </div>
             <div class="text-xs flex gap-x-1 items-center text-zinc-400">
               <svg class="fill-zinc-400" xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="#000000" viewBox="0 0 256 256"><path d="M128,24A104,104,0,1,0,232,128,104.11,104.11,0,0,0,128,24ZM74.08,197.5a64,64,0,0,1,107.84,0,87.83,87.83,0,0,1-107.84,0ZM96,120a32,32,0,1,1,32,32A32,32,0,0,1,96,120Zm97.76,66.41a79.66,79.66,0,0,0-36.06-28.75,48,48,0,1,0-59.4,0,79.66,79.66,0,0,0-36.06,28.75,88,88,0,1,1,131.52,0Z"></path></svg>
