--- a/shop/templates/partials/header.html
+++ b/shop/templates/partials/header.html
@@ -228,7 +228,7 @@
               </li>
             </div>
             <li>
-              <a href="#" class="py-3 px-4 hover:bg-gray-100 rounded-lg block">
+              <a href="{% url "blog:show_blogs" %}" class="py-3 px-4 hover:bg-gray-100 rounded-lg block">
                 وبلاگ
               </a>
             </li>
