--- a/shop/templates/user_panel.html
+++ b/shop/templates/user_panel.html
@@ -58,7 +58,7 @@ function add_to_shop_cart(product_id,qty) {
 </head>
 
 <body class="max-w-[1700px] mx-auto bg-zinc-100 flex flex-col min-h-screen relative">
-
+{% include "partials/messages.html" %}
   <!-- bg blur mobile -->
   <div id="overlay" class="fixed z-10 inset-0 bg-black/35 hidden transition-opacity duration-300"></div>
   <!-- Sidebar -->
@@ -90,13 +90,13 @@ function add_to_shop_cart(product_id,qty) {
       </li>
 
       <li>
-        <a href="#" class="py-3 px-4 hover:bg-gradient-to-l hover:from-zinc-100 hover:to-transparent rounded-lg flex gap-x-2">
+        <a href="{% url "accounts:personal_details" %}" class="py-3 px-4 hover:bg-gradient-to-l hover:from-zinc-100 hover:to-transparent rounded-lg flex gap-x-2">
           <svg class="fill-gray-700" xmlns="http://www.w3.org/2000/svg" width="20" height="20" fill="#000000" viewBox="0 0 256 256"><path d="M128,24A104,104,0,1,0,232,128,104.11,104.11,0,0,0,128,24Zm0,192a88,88,0,1,1,88-88A88.1,88.1,0,0,1,128,216Zm16-40a8,8,0,0,1-8,8,16,16,0,0,1-16-16V128a8,8,0,0,1,0-16,16,16,0,0,1,16,16v40A8,8,0,0,1,144,176ZM112,84a12,12,0,1,1,12,12A12,12,0,0,1,112,84Z"></path></svg>
           اطلاعات شخصی
         </a>
       </li>
       <li>
-        <a href="#" class="py-3 px-4 hover:bg-gradient-to-l hover:from-red-200 text-red-500 hover:text-red-600 hover:to-transparent rounded-lg flex gap-x-2 group">
+        <a href="{% url "accounts:logout_user" %}" class="py-3 px-4 hover:bg-gradient-to-l hover:from-red-200 text-red-500 hover:text-red-600 hover:to-transparent rounded-lg flex gap-x-2 group">
           <svg class="fill-gray-700 group-hover:fill-red-600 transition" xmlns="http://www.w3.org/2000/svg" width="20" height="20" fill="#000000" viewBox="0 0 256 256"><path d="M120,216a8,8,0,0,1-8,8H48a8,8,0,0,1-8-8V40a8,8,0,0,1,8-8h64a8,8,0,0,1,0,16H56V208h56A8,8,0,0,1,120,216Zm109.66-93.66-40-40a8,8,0,0,0-11.32,11.32L204.69,120H112a8,8,0,0,0,0,16h92.69l-26.35,26.34a8,8,0,0,0,11.32,11.32l40-40A8,8,0,0,0,229.66,122.34Z"></path></svg>
           خروج
         </a>
@@ -110,7 +110,7 @@ function add_to_shop_cart(product_id,qty) {
         <!-- btn menu mobile -->
         <svg class="lg:hidden fill-zinc-800 menu-mobile" xmlns="http://www.w3.org/2000/svg" width="28" height="28" fill="" viewBox="0 0 256 256"><path d="M224,128a8,8,0,0,1-8,8H40a8,8,0,0,1,0-16H216A8,8,0,0,1,224,128ZM40,72H216a8,8,0,0,0,0-16H40a8,8,0,0,0,0,16ZM216,184H40a8,8,0,0,0,0,16H216a8,8,0,0,0,0-16Z"></path></svg>
         <div class="md:text-lg md:font-yekanBakhBold text-zinc-600">
-          صفحه اصلی
+         
         </div>
       </div>
    
