start delete from favorite

--- a/shop/templates/products/productdetails.html
+++ b/shop/templates/products/productdetails.html
@@ -168,7 +168,7 @@
                 {% endif %}
               </div>
               <div class="text-xs text-red-400">
-                تنها 2 عدد در انبار باقی مانده
+                تنها {{product.status_warehouse}} عدد در انبار باقی مانده
               </div>
               <div
                 class="quantity-container mt-5 flex h-10 w-full items-center justify-between rounded-lg border border-gray-100 px-2 py-1">
@@ -226,7 +226,7 @@
                 <span class="text-xs">تومان</span>
               </div>
               <div class="text-xs text-red-400">
-                تنها 2 عدد در انبار باقی مانده
+                تنها {{product.status_warehouse}} عدد در انبار باقی مانده
               </div>
             </span>
           </div>
